alignement and responsive image fix

--- a/web/src/scss/site-general.scss
+++ b/web/src/scss/site-general.scss
@@ -5,6 +5,7 @@ body {
   line-height: 1.42857143;
   -webkit-font-smoothing: antialiased;
   -webkit-background-size: 1200px 800px;
+  background-size: 1200px 800px;
   color: #333333;
   //background: #fff;
   background: $theme-color-3;
@@ -37,6 +38,10 @@ a {
       color: $theme-color-5;
     }
   }
+}
+
+img {
+  max-width: 100%;
 }
 
 .has-columns {
